@@ -60,62 +60,62 @@
 #define I_SET_LOGNAME           29
 #define def_stay_setuid         (sudo_defs_table[30].sd_un.flag)
 #define I_STAY_SETUID           30
-#define def_env_reset           (sudo_defs_table[31].sd_un.flag)
-#define I_ENV_RESET             31
-#define def_preserve_groups     (sudo_defs_table[32].sd_un.flag)
-#define I_PRESERVE_GROUPS       32
-#define def_loglinelen          (sudo_defs_table[33].sd_un.ival)
-#define I_LOGLINELEN            33
-#define def_timestamp_timeout   (sudo_defs_table[34].sd_un.ival)
-#define I_TIMESTAMP_TIMEOUT     34
-#define def_passwd_timeout      (sudo_defs_table[35].sd_un.ival)
-#define I_PASSWD_TIMEOUT        35
-#define def_passwd_tries        (sudo_defs_table[36].sd_un.ival)
-#define I_PASSWD_TRIES          36
-#define def_umask               (sudo_defs_table[37].sd_un.mode)
-#define I_UMASK                 37
-#define def_logfile             (sudo_defs_table[38].sd_un.str)
-#define I_LOGFILE               38
-#define def_mailerpath          (sudo_defs_table[39].sd_un.str)
-#define I_MAILERPATH            39
-#define def_mailerflags         (sudo_defs_table[40].sd_un.str)
-#define I_MAILERFLAGS           40
-#define def_mailto              (sudo_defs_table[41].sd_un.str)
-#define I_MAILTO                41
-#define def_mailsub             (sudo_defs_table[42].sd_un.str)
-#define I_MAILSUB               42
-#define def_badpass_message     (sudo_defs_table[43].sd_un.str)
-#define I_BADPASS_MESSAGE       43
-#define def_timestampdir        (sudo_defs_table[44].sd_un.str)
-#define I_TIMESTAMPDIR          44
-#define def_timestampowner      (sudo_defs_table[45].sd_un.str)
-#define I_TIMESTAMPOWNER        45
-#define def_exempt_group        (sudo_defs_table[46].sd_un.str)
-#define I_EXEMPT_GROUP          46
-#define def_passprompt          (sudo_defs_table[47].sd_un.str)
-#define I_PASSPROMPT            47
-#define def_runas_default       (sudo_defs_table[48].sd_un.str)
-#define I_RUNAS_DEFAULT         48
-#define def_editor              (sudo_defs_table[49].sd_un.str)
-#define I_EDITOR                49
-#define def_listpw              (sudo_defs_table[50].sd_un.tuple)
-#define I_LISTPW                50
-#define def_verifypw            (sudo_defs_table[51].sd_un.tuple)
-#define I_VERIFYPW              51
-#define def_noexec              (sudo_defs_table[52].sd_un.flag)
-#define I_NOEXEC                52
-#define def_noexec_file         (sudo_defs_table[53].sd_un.str)
-#define I_NOEXEC_FILE           53
-#define def_env_check           (sudo_defs_table[54].sd_un.list)
-#define I_ENV_CHECK             54
-#define def_env_delete          (sudo_defs_table[55].sd_un.list)
-#define I_ENV_DELETE            55
-#define def_env_keep            (sudo_defs_table[56].sd_un.list)
-#define I_ENV_KEEP              56
-#define def_ignore_local_sudoers (sudo_defs_table[57].sd_un.flag)
-#define I_IGNORE_LOCAL_SUDOERS  57
-#define def_setenv              (sudo_defs_table[58].sd_un.flag)
-#define I_SETENV                58
+#define def_preserve_groups     (sudo_defs_table[31].sd_un.flag)
+#define I_PRESERVE_GROUPS       31
+#define def_loglinelen          (sudo_defs_table[32].sd_un.ival)
+#define I_LOGLINELEN            32
+#define def_timestamp_timeout   (sudo_defs_table[33].sd_un.ival)
+#define I_TIMESTAMP_TIMEOUT     33
+#define def_passwd_timeout      (sudo_defs_table[34].sd_un.ival)
+#define I_PASSWD_TIMEOUT        34
+#define def_passwd_tries        (sudo_defs_table[35].sd_un.ival)
+#define I_PASSWD_TRIES          35
+#define def_umask               (sudo_defs_table[36].sd_un.mode)
+#define I_UMASK                 36
+#define def_logfile             (sudo_defs_table[37].sd_un.str)
+#define I_LOGFILE               37
+#define def_mailerpath          (sudo_defs_table[38].sd_un.str)
+#define I_MAILERPATH            38
+#define def_mailerflags         (sudo_defs_table[39].sd_un.str)
+#define I_MAILERFLAGS           39
+#define def_mailto              (sudo_defs_table[40].sd_un.str)
+#define I_MAILTO                40
+#define def_mailsub             (sudo_defs_table[41].sd_un.str)
+#define I_MAILSUB               41
+#define def_badpass_message     (sudo_defs_table[42].sd_un.str)
+#define I_BADPASS_MESSAGE       42
+#define def_timestampdir        (sudo_defs_table[43].sd_un.str)
+#define I_TIMESTAMPDIR          43
+#define def_timestampowner      (sudo_defs_table[44].sd_un.str)
+#define I_TIMESTAMPOWNER        44
+#define def_exempt_group        (sudo_defs_table[45].sd_un.str)
+#define I_EXEMPT_GROUP          45
+#define def_passprompt          (sudo_defs_table[46].sd_un.str)
+#define I_PASSPROMPT            46
+#define def_runas_default       (sudo_defs_table[47].sd_un.str)
+#define I_RUNAS_DEFAULT         47
+#define def_editor              (sudo_defs_table[48].sd_un.str)
+#define I_EDITOR                48
+#define def_listpw              (sudo_defs_table[49].sd_un.tuple)
+#define I_LISTPW                49
+#define def_verifypw            (sudo_defs_table[50].sd_un.tuple)
+#define I_VERIFYPW              50
+#define def_noexec              (sudo_defs_table[51].sd_un.flag)
+#define I_NOEXEC                51
+#define def_noexec_file         (sudo_defs_table[52].sd_un.str)
+#define I_NOEXEC_FILE           52
+#define def_ignore_local_sudoers (sudo_defs_table[53].sd_un.flag)
+#define I_IGNORE_LOCAL_SUDOERS  53
+#define def_setenv              (sudo_defs_table[54].sd_un.flag)
+#define I_SETENV                54
+#define def_env_reset           (sudo_defs_table[55].sd_un.flag)
+#define I_ENV_RESET             55
+#define def_env_check           (sudo_defs_table[56].sd_un.list)
+#define I_ENV_CHECK             56
+#define def_env_delete          (sudo_defs_table[57].sd_un.list)
+#define I_ENV_DELETE            57
+#define def_env_keep            (sudo_defs_table[58].sd_un.list)
+#define I_ENV_KEEP              58
 
 enum def_tupple {
 	never,
